// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normalization Golden Files - Edge cases should handle array structuredContent 1`] = `
{
  "structuredContent": [
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Item 1",
    },
    {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Item 2",
    },
  ],
}
`;

exports[`Normalization Golden Files - Edge cases should handle deeply nested items recursively 1`] = `
{
  "structuredContent": {
    "items": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "items": [
          {
            "createDate": "NORMALIZED_DATE",
            "id": "00000000-0000-0000-0000-000000000000",
          },
        ],
      },
    ],
  },
}
`;

exports[`Normalization Golden Files - Edge cases should handle empty arrays 1`] = `
{
  "structuredContent": {
    "ancestors": [],
    "avatarUrls": [],
    "id": "00000000-0000-0000-0000-000000000000",
    "items": [],
    "urlInfos": [],
    "variants": [],
  },
}
`;

exports[`Normalization Golden Files - Edge cases should handle null and undefined values 1`] = `
{
  "structuredContent": {
    "document": undefined,
    "id": "00000000-0000-0000-0000-000000000000",
    "name": null,
    "parent": null,
  },
}
`;

exports[`Normalization Golden Files - Edge cases should handle primitive structuredContent 1`] = `
{
  "structuredContent": "just a string",
}
`;

exports[`Normalization Golden Files - Edge cases should preserve non-normalized fields 1`] = `
{
  "structuredContent": {
    "arrayOfStrings": [
      "a",
      "b",
      "c",
    ],
    "customField": "should be preserved",
    "id": "00000000-0000-0000-0000-000000000000",
    "nestedObject": {
      "baz": 123,
      "foo": "bar",
    },
  },
}
`;

exports[`Normalization Golden Files - Error response Legacy text format should normalize multiple traceIds in text 1`] = `
{
  "content": [
    {
      "text": "Error: 00-1111111111111111111111111111111-1111111111111111-00, Related: 00-2222222222222222222222222222222-2222222222222222-00",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - Error response Legacy text format should normalize traceId in text content 1`] = `
{
  "content": [
    {
      "text": "{"type":"error","title":"Not Found","status":404,"traceId":"00-fedcba9876543210fedcba9876543210-fedcba987654321-00"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`Normalization Golden Files - Error response No traceId present should leave content unchanged when no traceId 1`] = `
{
  "content": [
    {
      "text": "Simple error message without trace ID",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - Error response structuredContent format should normalize traceId in structuredContent 1`] = `
{
  "isError": true,
  "structuredContent": {
    "status": 400,
    "title": "Bad Request",
    "traceId": "normalized-trace-id",
    "type": "error",
  },
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Array responses (ancestors) should normalize array response 1`] = `
{
  "content": [
    {
      "text": "[{"id":"ancestor1-1234-1234-123456789012","name":"Root","createDate":"2025-01-15T10:30:00.000Z","parent":null},{"id":"ancestor2-1234-1234-123456789012","name":"Child","createDate":"2025-01-16T11:00:00.000Z","parent":{"id":"parent-1234-1234-123456789012"}}]",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Items array in object should normalize items array with all fields 1`] = `
{
  "content": [
    {
      "text": "{"items":[{"id":"item1-1234-1234-123456789012","name":"Test_1704067200000_Item","createDate":"2025-01-15T10:30:00.000Z","publishDate":"2025-01-16T11:00:00.000Z","updateDate":"2025-01-17T12:30:00.000Z","parent":{"id":"parent-1234-1234-123456789012","path":"/root/folder_1704067200000"},"documentType":{"id":"doctype-1234-1234-123456789012"},"email":"user-12345@example.com","userName":"admin-67890@domain.com","avatarUrls":["/umbraco/assets/avatars/0123456789abcdef0123456789abcdef01234567.jpg"]}],"total":1}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Single item with idToReplace should normalize block results and availableBlocks 1`] = `
{
  "content": [
    {
      "text": "{"id":"block-result-1234-1234-123456789012","results":[{"contentKey":"block1-1234-1234-123456789012","success":true},{"contentKey":"block2-1234-1234-123456789012","success":true}],"availableBlocks":[{"key":"available1-1234-1234-123456789012","label":"Block 1"},{"key":"available2-1234-1234-123456789012","label":"Block 2"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Single item with idToReplace should normalize document with nested documentType and variants 1`] = `
{
  "content": [
    {
      "text": "{"id":"version-id-1234-1234-123456789012","document":{"id":"doc-id-1234-1234-123456789012","documentType":{"id":"doctype-1234-1234-123456789012","alias":"blogPost"},"variants":[{"culture":"en-US","createDate":"2025-01-15T10:30:00.000Z","publishDate":"2025-01-16T11:00:00.000Z","updateDate":"2025-01-17T12:30:00.000Z","versionDate":"2025-01-18T13:45:00.000Z"}]},"documentType":{"id":"top-doctype-1234-1234-123456789012"},"user":{"id":"user-1234-1234-123456789012"}}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Single item with idToReplace should normalize email, userName, avatarUrls, urlInfos 1`] = `
{
  "content": [
    {
      "text": "{"id":"user-profile-1234-1234-123456789012","email":"testuser-12345@example.com","userName":"admin-67890@domain.com","avatarUrls":["/umbraco/assets/avatars/0123456789abcdef0123456789abcdef01234567.jpg","/umbraco/assets/avatars/fedcba9876543210fedcba9876543210fedcba98.jpg"],"urlInfos":[{"culture":"en-US","url":"/media/abc123/profile.jpg"},{"culture":"da-DK","url":"/media/xyz789/profile.jpg"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Single item with idToReplace should normalize single item with all date fields 1`] = `
{
  "content": [
    {
      "text": "{"id":"specific-id-1234-1234-123456789012","createDate":"2025-01-15T10:30:00.000Z","availableUntil":"2025-12-31T23:59:59.000Z","publishDate":"2025-01-16T11:00:00.000Z","updateDate":"2025-01-17T12:30:00.000Z","versionDate":"2025-01-18T13:45:00.000Z","lastLoginDate":"2025-01-19T14:00:00.000Z","lastPasswordChangeDate":"2025-01-20T15:15:00.000Z","lastLockoutDate":"2025-01-21T16:30:00.000Z"}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Single item with idToReplace should normalize variants array with all date fields 1`] = `
{
  "content": [
    {
      "text": "{"id":"doc-with-variants-1234-1234-123456789012","variants":[{"culture":"en-US","createDate":"2025-01-15T10:30:00.000Z","publishDate":"2025-01-16T11:00:00.000Z","updateDate":"2025-01-17T12:30:00.000Z","versionDate":"2025-01-18T13:45:00.000Z"},{"culture":"da-DK","createDate":"2025-02-15T10:30:00.000Z","publishDate":"2025-02-16T11:00:00.000Z","updateDate":"2025-02-17T12:30:00.000Z","versionDate":"2025-02-18T13:45:00.000Z"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Top-level variants in object (no idToReplace) should normalize variants at object level 1`] = `
{
  "content": [
    {
      "text": "{"variants":[{"culture":"en-US","createDate":"2025-01-15T10:30:00.000Z","publishDate":"2025-01-16T11:00:00.000Z","updateDate":"2025-01-17T12:30:00.000Z"}],"otherField":"value"}",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - legacy content[0].text format Void operations should return void result unchanged 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`Normalization Golden Files - structuredContent format Complex nested structures should normalize deeply nested document with all fields 1`] = `
{
  "structuredContent": {
    "ancestors": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Root",
      },
    ],
    "createDate": "NORMALIZED_DATE",
    "document": {
      "documentType": {
        "alias": "blogPost",
        "id": "00000000-0000-0000-0000-000000000000",
      },
      "id": "00000000-0000-0000-0000-000000000000",
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "parent": {
      "id": "00000000-0000-0000-0000-000000000000",
      "path": "/root/blog_NORMALIZED_TIMESTAMP",
    },
    "user": {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Editor",
    },
    "variants": [
      {
        "createDate": "NORMALIZED_DATE",
        "culture": "en-US",
        "publishDate": "NORMALIZED_DATE",
      },
    ],
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Date normalization should normalize all date fields 1`] = `
{
  "structuredContent": {
    "createDate": "NORMALIZED_DATE",
    "id": "00000000-0000-0000-0000-000000000000",
    "lastLockoutDate": "NORMALIZED_DATE",
    "lastLoginDate": "NORMALIZED_DATE",
    "lastPasswordChangeDate": "NORMALIZED_DATE",
    "publishDate": "NORMALIZED_DATE",
    "updateDate": "NORMALIZED_DATE",
    "versionDate": "NORMALIZED_DATE",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Date normalization should normalize dates in variants array 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "variants": [
      {
        "createDate": "NORMALIZED_DATE",
        "culture": "en-US",
        "publishDate": "NORMALIZED_DATE",
        "updateDate": "NORMALIZED_DATE",
        "versionDate": "NORMALIZED_DATE",
      },
      {
        "createDate": "NORMALIZED_DATE",
        "culture": "da-DK",
        "publishDate": "NORMALIZED_DATE",
        "updateDate": "NORMALIZED_DATE",
        "versionDate": "NORMALIZED_DATE",
      },
    ],
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize ancestors array ids 1`] = `
{
  "structuredContent": {
    "ancestors": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Root",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Middle",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Parent",
      },
    ],
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize basic id field 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Test Item",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize document.id 1`] = `
{
  "structuredContent": {
    "document": {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "My Document",
    },
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize documentType.id 1`] = `
{
  "structuredContent": {
    "documentType": {
      "alias": "myDocType",
      "id": "00000000-0000-0000-0000-000000000000",
    },
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize id with specific idToReplace 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Test Item",
    "otherId": "99999999-9999-9999-9999-999999999999",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize mediaType.id 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "mediaType": {
      "alias": "Image",
      "id": "00000000-0000-0000-0000-000000000000",
    },
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize parent.id 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Child",
    "parent": {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Parent",
    },
  },
}
`;

exports[`Normalization Golden Files - structuredContent format ID normalization should normalize user.id 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "user": {
      "id": "00000000-0000-0000-0000-000000000000",
      "name": "Admin User",
    },
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Nested items array should normalize items in nested items array 1`] = `
{
  "structuredContent": {
    "items": [
      {
        "createDate": "NORMALIZED_DATE",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Item 1",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
      },
      {
        "createDate": "NORMALIZED_DATE",
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Item 2",
        "parent": null,
      },
    ],
    "total": 2,
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize avatarUrls with hash 1`] = `
{
  "structuredContent": {
    "avatarUrls": [
      "/umbraco/assets/avatars/NORMALIZED_AVATAR.jpg",
      "/umbraco/assets/avatars/NORMALIZED_AVATAR.jpg",
    ],
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize email with random numbers 1`] = `
{
  "structuredContent": {
    "email": "test-NORMALIZED@example.com",
    "id": "00000000-0000-0000-0000-000000000000",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize name with timestamp 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Test_NORMALIZED_TIMESTAMP_Item",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize parent.path with timestamp 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "parent": {
      "id": "00000000-0000-0000-0000-000000000000",
      "path": "/root/folder_NORMALIZED_TIMESTAMP/parent",
    },
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize path with timestamp 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "path": "/root/folder_NORMALIZED_TIMESTAMP/subfolder_NORMALIZED_TIMESTAMP/file.js",
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize urlInfos with media path 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "urlInfos": [
      {
        "culture": "en-US",
        "url": "/media/NORMALIZED_PATH/image.jpg",
      },
      {
        "culture": "da-DK",
        "url": "/media/NORMALIZED_PATH/image.jpg",
      },
    ],
  },
}
`;

exports[`Normalization Golden Files - structuredContent format Regex normalizations should normalize userName with random numbers 1`] = `
{
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "userName": "testuser-NORMALIZED@domain.com",
  },
}
`;
